--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
 torch==1.13.0
 transformers==4.23.1
 diffusers==0.11.1
+
+scikit-learn
+wandb
+ftfy
+datasets
+accelerate
+
+#conda install pytorch torchvision -c pytorch
