--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ ftfy
 datasets
 accelerate
 
-#conda install pytorch torchvision -c pytorch
+# conda install pytorch torchvision -c pytorch
+# [W NNPACK.cpp:61] Could not initialize NNPACK! Reason: Unsupported hardware. -> USE_NNPACK=0 python setup.py install (https://discuss.pytorch.org/t/bug-w-nnpack-cpp-80-could-not-initialize-nnpack-reason-unsupported-hardware/107518)
