--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-torch==1.13.0
-transformers==4.23.1
-diffusers==0.11.1
+torch
+torchvision
+transformers==4.41.2
+diffusers==0.21.1
 
 scikit-learn
 wandb
@@ -8,3 +9,6 @@ ftfy
 datasets
 accelerate
 numpy
+
+ipython
+notebook
